--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
@@ -1,7 +1,19 @@
 ﻿@page "/"
+@inject HttpClient Http
+@using Raft.Data.Models;
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<p>Welcome to your new app.</p>
+<p>@message</p>
 
-Welcome to your new app.
+@code {
+    private string message = "Hello, world!";
+    protected async override Task OnInitializedAsync()
+    {
+        var response = await Http.GetFromJsonAsync<VersionedValue<string>>("Storage/StrongGet?key=test");
+        Console.WriteLine(response.Value);
+        message = response.Value;
+        StateHasChanged();
+    }
+}
