deposit page and ui refresh

--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
@@ -5,7 +5,8 @@
 
 <PageTitle>Home</PageTitle>
 
-<p>Welcome to your new app.</p>
+<h3>Tally</h3>
+
 <p>@message</p>
 
 <button class="btn btn-primary" @onclick="OnClick">Tally</button>
