--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/MainLayout.razor.css
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/MainLayout.razor.css
@@ -6,10 +6,11 @@
 
 main {
     flex: 1;
+    background-color: #262422; 
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: #161614;
 }
 
 .top-row {
@@ -77,7 +78,8 @@ main {
 }
 
 #blazor-error-ui {
-    background: lightyellow;
+    background: #262422;
+    color: whitesmoke;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     display: none;
