--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/NavMenu.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Raft.Shop</a>
+        <a class="navbar-brand" href="">RAFTSHOP</a>
     </div>
 </div>
 
@@ -9,20 +9,16 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+            <NavLink class="nav-link px-2" href="" Match="NavLinkMatch.All">
+                <span class="bi bi-shop fs-4 mb-4"></span>
+                <b class="ms-2">HOME</b>
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+        <div class="nav-item px-3 ">
+            <NavLink class="nav-link px-2" href="deposit">
+                <span class="bi bi-piggy-bank fs-4 mb-4"></span>
+                <b class="ms-2">DEPOSIT</b>
             </NavLink>
         </div>
     </nav>
