Inventory page link

--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/NavMenu.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/NavMenu.razor
@@ -10,15 +10,22 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link px-2" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-shop fs-4 mb-4"></span>
-                <b class="ms-2">HOME</b>
+                <span class="bi bi-house-fill fs-4 mb-4"></span>
+                <b class="ms-2">Home</b>
             </NavLink>
         </div>
 
         <div class="nav-item px-3 ">
-            <NavLink class="nav-link px-2" href="deposit">
-                <span class="bi bi-piggy-bank fs-4 mb-4"></span>
-                <b class="ms-2">DEPOSIT</b>
+            <NavLink class="nav-link px-2" href="account">
+                <span class="bi bi-piggy-bank-fill fs-4 mb-4"></span>
+                <b class="ms-2">Account</b>
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3 ">
+            <NavLink class="nav-link px-2" href="inventory">
+                <span class="bi bi-box-seam-fill fs-4 mb-4"></span>
+                <b class="ms-2">Inventory</b>
             </NavLink>
         </div>
     </nav>
