--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Account.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Account.razor
@@ -1,11 +1,11 @@
 @rendermode RenderMode.InteractiveServer
-@page "/deposit"
+@page "/account"
 
 @using Raft.Data.Services
 
 @inject IAccountService AccountService
 
-<h3>Deposit</h3>
+<h3>Account</h3>
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-6">
