dont let tem decrement below 0 stock

--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Inventory.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Inventory.razor
@@ -94,6 +94,10 @@ else
 
     private async Task DecrementQuantity(Product product)
     {
+        if (product.QuantityInStock == 0)
+        {
+            return;
+        }
         var updatedProduct = await InventoryService.DecrementProductStockAsync(product);
         products = products.Select(p => p.Id == product.Id ? updatedProduct : p).ToList();
     }
