refactor to use storage service with idempodent reducer

--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Account.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Account.razor
@@ -63,7 +63,8 @@
     private async Task Deposit()
     {
         await AccountService.DepositAsync(username, amount);
-        await GetBalance();
+        balance = balance + amount; // optimistic update
+        StateHasChanged();
         amount = 0;
     }
 
