start order processing page

--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/NavMenu.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Layout/NavMenu.razor
@@ -28,6 +28,13 @@
                 <b class="ms-2">Inventory</b>
             </NavLink>
         </div>
+
+        <div class="nav-item px-3 ">
+            <NavLink class="nav-link px-2" href="processing">
+                <span class="bi bi-bar-chart-steps fs-4 mb-4"></span>
+                <b class="ms-2">Processing</b>
+            </NavLink>
+        </div>
     </nav>
 </div>
 
