--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
@@ -1,49 +1,130 @@
 ﻿@page "/"
 @rendermode InteractiveServer
-@inject HttpClient Http
 @using Raft.Data.Models;
+@using Raft.Data.Services;
+@inject IOrderService OrderService
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Shop</PageTitle>
 
-<h3>Tally</h3>
+<h3>Shop</h3>
+<hr/>
+<h4>Products</h4>
+<div class="text-center mb-2">
+    <label for="filter" class="form-label">Filter products</label>
+    <input type="text" @bind-value="@filter" @bind-value:event="oninput" class="form-control" placeholder="Filter by name..." style="max-width: 500px; margin: auto;">
+</div>
+@if (products == null || !products.Any())
+{
+    <div class="alert alert-info" role="alert">
+        Loading products...
+    </div>
+}
+else
+{
+    <div class="d-flex flex-wrap justify-content-start">
+        @foreach (var product in products.Where(p => p.Name.Contains(filter, StringComparison.OrdinalIgnoreCase)))
+        {
+            <div class="card m-2" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title mb-2">@product.Name</h5>
+                    <div class="d-flex justify-content-between">
+                        <h6 class="card-subtitle mb-2 text-muted">Price: @product.Price.ToString("C")</h6>
+                    </div>
+                    <div class="card-text">
+                        @if(showDescription.TryGetValue(product.Id, out var show) && show)
+                        {
+                            @product.Description
+                            <button class="btn btn-link" @onclick="() => ToggleDescription(product)">Read less</button>
+                        }
+                        else if (product.Description.Length > 100)
+                        {
+                            <div class="text-truncate">@product.Description.Substring(0, 100)</div>
+                            <button class="btn btn-link ms-0 ps-0" @onclick="() => ToggleDescription(product)">Read more</button>
+                        }
+                    </div>
+                    <div class="mt-2 d-flex justify-content-end">
+                        <button class="btn btn-primary" @onclick="() => AddToCart(product)">Add to cart</button>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
 
-<p>@message</p>
-
-<button class="btn btn-primary" @onclick="OnClick">Tally</button>
+<h4 class="mt-3">Cart</h4>
+@if (orderInfo.Products == null || !orderInfo.Products.Any())
+{
+    <div class="alert alert-info" role="alert">
+        Add products to your cart by clicking the "Add to cart" button on a product.
+    </div>
+}
+else
+{
+    <div class="d-flex flex-wrap justify-content-start">
+        <div class="card m-2" style="width: 18rem;">
+            <div class="card-body">
+                <div>
+                    <label for="username" class="form-label">Name</label>
+                    <input type="text" @bind-value="@orderInfo.Username" @bind-value:event="oninput" class="form-control" placeholder="Required" style="max-width: 500px; margin: auto;">
+                </div>
+            <div class="mt-2 d-flex justify-content-between">
+                <div class="card-subtitle my-auto text-muted">
+                    Total: @orderInfo.Products.Sum(p => p.Price).ToString("C")
+                </div>
+                <button class="btn btn-success" disabled=@(String.IsNullOrEmpty(orderInfo.Username)) @onclick="() => OrderService.CreateOrderAsync(orderInfo)">Place order</button>
+            </div>
+            </div>
+        </div>
+        @foreach (var product in orderInfo.Products.Where(p => p.Name.Contains(filter, StringComparison.OrdinalIgnoreCase)))
+        {
+            <div class="card m-2" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title mb-2">@product.Name</h5>
+                    <div class="d-flex justify-content-between">
+                        <h6 class="card-subtitle mb-2 text-muted">Price: @product.Price.ToString("C")</h6>
+                    </div>
+                    <div class="mt-2 d-flex justify-content-end">
+                        <button class="btn btn-primary" @onclick="() => RemoveFromCart(product)">Remove</button>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
 
 @code {
-    private string message = "";
-    protected async override Task OnInitializedAsync()
+    private List<Product> products = new List<Product>();
+    private List<Product> cart = new List<Product>();
+    private OrderInfo orderInfo = new OrderInfo();
+    private string filter = "";
+    private Dictionary<int, bool> showDescription = new Dictionary<int, bool>();
+
+    protected override void OnInitialized()
     {
-        var compareAndSwapRequest = new CompareAndSwapRequest
-        {
-            Key = "test",
-            OldValue = null,
-            NewValue = message 
-        };
+       products = ProductsData.GetProducts(); 
+    }
 
-        try
+    private void ToggleDescription(Product product)
+    {
+        if (showDescription.TryGetValue(product.Id, out var show))
         {
-            await Http.PostAsJsonAsync("gateway/Storage/CompareAndSwap", compareAndSwapRequest);
+            showDescription[product.Id] = !show;
         }
-        catch{}
+        else
+        {
+            showDescription.Add(product.Id, true);
+        }
+    }
 
-        var response = await Http.GetFromJsonAsync<VersionedValue<string>>("gateway/Storage/EventualGet?key=test");
-        message = response?.Value ?? "";
+    private void AddToCart(Product product)
+    {
+        orderInfo.Products.Add(product);
         StateHasChanged();
     }
 
-    private async Task OnClick()
+    private void RemoveFromCart(Product product)
     {
-        var compareAndSwapRequest = new CompareAndSwapRequest
-        {
-            Key = "test",
-            OldValue = message,
-            NewValue = message + "1" 
-        };
-        await Http.PostAsJsonAsync("gateway/Storage/CompareAndSwap", compareAndSwapRequest);
-        var response = await Http.GetFromJsonAsync<VersionedValue<string>>("gateway/Storage/StrongGet?key=test");
-        message = response?.Value ?? "";
+        orderInfo.Products.Remove(product);
         StateHasChanged();
     }
 }
