--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Home.razor
@@ -129,6 +129,7 @@ else
 
     private void AddToCart(Product product)
     {
+        orderPlaced = false;
         orderInfo.Products.Add(product);
         StateHasChanged();
     }
