--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/OrderProcessing.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/OrderProcessing.razor
@@ -1,3 +1,4 @@
+@rendermode RenderMode.InteractiveServer
 @page "/processing"
 @using Raft.Data.Services;
 @using Raft.Data.Models;
@@ -18,6 +19,10 @@ else
     {
         <p><em>No orders found</em></p>
     }
+    else if (processing)
+    {
+        <p><em>Processing...</em></p>
+    }
     else
     {
         <div class="accordion" id="orderAccordion">
@@ -29,14 +34,14 @@ else
                 </h2>
                 <div id="pendingCollapse" class="accordion-collapse collapse" aria-labelledby="pendingHeading" data-bs-parent="#orderAccordion">
                     <div class="accordion-body d-flex flex-wrap">
-                        @if (!orders.Any(o => o.Status == OrderStatus.Pending))
+                        @if (!orders.Any(o => o.Status.Contains("pending")))
                         {
                             <p><em>No pending orders</em></p>
                         }
-                        @foreach (var order in orders.Where(o => o.Status == OrderStatus.Pending))
+                        @foreach (var order in orders.Where(o => o.Status.Contains("pending")))
                         {
                             <div class="m-2">
-                                <OrderDetail OrderInfo="order.OrderInfo" OrderId="order.Id">
+                                <OrderDetail OrderInfo="order.OrderInfo" OrderId="order.Id" Status="@order.Status">
                                     <Action>
                                         <button class="btn btn-primary" @onclick="() => ProcessOrder(order.Id)">Process</button>
                                     </Action>
@@ -55,14 +60,14 @@ else
                 </h2>
                 <div id="processedCollapse" class="accordion-collapse collapse" aria-labelledby="processedHeading" data-bs-parent="#orderAccordion">
                     <div class="accordion-body d-flex flex-wrap">
-                        @if (!orders.Any(o => o.Status == OrderStatus.Processed))
+                        @if (!orders.Any(o => o.Status.Contains("processed")))
                         {
                             <p><em>No processed orders</em></p>
                         }
-                        @foreach (var order in orders.Where(o => o.Status == OrderStatus.Processed))
+                        @foreach (var order in orders.Where(o => o.Status.Contains("processed")))
                         {
                             <div class="my-2">
-                                <OrderDetail OrderInfo="order.OrderInfo" OrderId="order.Id" />
+                                <OrderDetail OrderInfo="order.OrderInfo" OrderId="order.Id" Status="@order.Status"  />
                             </div>
                         }
                     </div>
@@ -77,14 +82,14 @@ else
                 </h2>
                 <div id="failedCollapse" class="accordion-collapse collapse" aria-labelledby="failedHeading" data-bs-parent="#orderAccordion">
                     <div class="accordion-body d-flex flex-wrap">
-                        @if (!orders.Any(o => o.Status == OrderStatus.Failed))
+                        @if (!orders.Any(o => o.Status.Contains("rejected")))
                         {
                             <p><em>No failed orders</em></p>
                         }
-                        @foreach (var order in orders.Where(o => o.Status == OrderStatus.Failed))
+                        @foreach (var order in orders.Where(o => o.Status.Contains("rejected")))
                         {
                             <div class="my-2">
-                                <OrderDetail OrderInfo="order.OrderInfo" OrderId="order.Id" />
+                                <OrderDetail OrderInfo="order.OrderInfo" OrderId="order.Id" Status="@order.Status" />
                             </div>
                         }
                     </div>
@@ -98,7 +103,7 @@ else
 {
 
     private List<Order> orders;
-
+    private bool processing = false;
     protected override async Task OnInitializedAsync()
     {
         orders = await OrderService.GetOrdersAsync();
@@ -106,5 +111,10 @@ else
 
     private async Task ProcessOrder(Guid orderId)
     {
+        Console.WriteLine($"Processing order {orderId}");
+        processing = true;
+        await OrderService.ProcessOrderAsync(orderId);
+        processing = false;
+        orders = await OrderService.GetOrdersAsync();
     }
 }
