--- a/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Account.razor
+++ b/src/Raft/Raft.Shop/Raft.Shop/Components/Pages/Account.razor
@@ -32,7 +32,7 @@
                     <div class="col-md-6">
                         <div class="mb-3">
                             <label for="depositAmount" class="form-label">Deposit Amount</label>
-                            <input type="number" class="form-control" id="depositAmount" @bind="amount" @onblur="FormatMoney">
+                            <input type="number" class="form-control" id="depositAmount" @bind-value="amount" @bind-value:event="oninput" @onblur="FormatMoney">
                         </div>
                     </div>
                 </div>
